Fix "disappearing" hamburger menu on mobile home page.

--- a/themes/United/less/ubuntu-mate-triangles.less
+++ b/themes/United/less/ubuntu-mate-triangles.less
@@ -83,3 +83,15 @@ body {
 }
 
 .fade-odd {}
+
+/* Fix for home page needing to scroll horizontally */
+@media screen and (max-width: 768px) {
+    #ubuntu-mate-triangles {
+        left: 0;
+        right: 0;
+    }
+
+    .description {
+        margin-top: 2em !important;
+    }
+}
